# Taicho

./: .editorconfig  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci-macos.yml
.serena/: project.yml
assets/: icon.icns  styles.css
src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/actor/: client_factory.rs  commands.rs  dispatch.rs  mock.rs  mod.rs  stream.rs
src/domain/: chat.rs  conclusion.rs  message.rs  mod.rs  page.rs  peer.rs  queue.rs  raw_json.rs  search.rs  session.rs  upload.rs
src/persistence/: mod.rs  paths.rs  profile_store.rs  secret_store.rs  settings_store.rs
src/state/: connection.rs  mod.rs  selection.rs  toast.rs
src/ui/: layout.rs  menu.rs  mod.rs  shortcuts.rs
src/ui/chat/: markdown.rs  mod.rs  panel.rs
src/ui/common/: confirm_modal.rs  json_editor.rs  json_viewer.rs  mod.rs  pagination.rs  toast.rs
src/ui/conclusions/: create_modal.rs  delete_confirm.rs  list.rs  mod.rs  query_bar.rs
src/ui/connection/: mod.rs  profile_editor.rs
src/ui/dreams/: button.rs  mod.rs  queue.rs
src/ui/logs/: mod.rs
src/ui/messages/: detail.rs  list.rs  mod.rs
src/ui/peers/: detail.rs  list.rs  mod.rs
src/ui/search/: palette.rs
src/ui/sessions/: detail.rs  list.rs  mod.rs
src/ui/settings/: mod.rs  settings_panel.rs
src/ui/upload/: browse_button.rs  drag_drop_zone.rs  metadata_editor.rs  mod.rs
src/ui/workspaces/: mod.rs  view.rs
tests/: actor_smoke.rs  client_factory_tests.rs  domain_m5_m9.rs  domain_mapping_m5_m9.rs  error_m5_m9.rs  integration.rs  manual.md  profile_store_roundtrip.rs
